--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "cypress": "10.3.1",
+    "prettier": "^2.8.1",
     "react-testing-library": "^8.0.1",
     "start-server-and-test": "1.14.0",
     "typescript": "4.7.4"
