--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "next build",
     "start": "next start",
     "cypress": "cypress open",
+    "test": "jest",
     "cypress:headless": "cypress run",
     "e2e": "start-server-and-test dev http://localhost:3000 cypress",
     "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
@@ -20,12 +21,17 @@
     "sass": "^1.56.2"
   },
   "devDependencies": {
+    "@testing-library/react": "latest",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/user-event": "14.2.0",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "cypress": "10.3.1",
+    "jest": "^29.4.1",
+    "@types/testing-library__jest-dom": "5.14.5",
+    "jest-environment-jsdom": "28.1.0",
     "prettier": "^2.8.1",
-    "react-testing-library": "^8.0.1",
     "start-server-and-test": "1.14.0",
     "typescript": "4.7.4"
   }
