setup unit and end to end tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "incremental": true,
     "baseUrl": "."
   },
+  "types": ["node", "jest", "@testing-library/jest-dom"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
