--- a/package.json
+++ b/package.json
@@ -12,24 +12,25 @@
   },
   "volta": {
     "node": "18.12.1",
-    "npm": "8.19.2"
+    "npm": "9.6.1"
   },
   "dependencies": {
+    "@next/mdx": "^13.2.4",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.56.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "latest",
-    "@testing-library/jest-dom": "5.16.4",
     "@testing-library/user-event": "14.2.0",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/testing-library__jest-dom": "5.14.5",
     "cypress": "10.3.1",
     "jest": "^29.4.1",
-    "@types/testing-library__jest-dom": "5.14.5",
     "jest-environment-jsdom": "28.1.0",
     "prettier": "^2.8.1",
     "start-server-and-test": "1.14.0",
