--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "npm": "9.6.1"
   },
   "dependencies": {
-    "@next/mdx": "^13.2.4",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.3.0",
+    "gray-matter": "^4.0.3",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,6 +30,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "latest",
     "@testing-library/user-event": "14.2.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
@@ -32,6 +38,7 @@
     "cypress": "10.3.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "28.1.0",
+    "mongodb-memory-server": "^8.12.2",
     "prettier": "^2.8.1",
     "start-server-and-test": "1.14.0",
     "typescript": "4.7.4"
