--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "incremental": true,
     "baseUrl": "."
   },
-  "types": ["node", "jest", "@testing-library/jest-dom"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "types": ["node", "jest", "@testing-library/jest-dom", "@types/jest"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx","**/*.spec.ts"],
   "exclude": ["node_modules"]
 }
