--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "dev:email": "email dev",
     "cypress": "cypress open",
     "test": "jest",
     "cypress:headless": "cypress run",
@@ -18,26 +19,34 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.3.0",
+    "@react-email/button": "^0.0.9",
+    "@react-email/html": "^0.0.4",
+    "@react-email/render": "^0.0.7",
+    "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.4.0",
     "gray-matter": "^4.0.3",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
     "next": "latest",
+    "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "18.2.0",
+    "react-email": "^1.9.4",
     "sass": "^1.56.2"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "latest",
     "@testing-library/user-event": "14.2.0",
     "@types/jest": "^29.5.0",
     "@types/node": "18.0.6",
+    "@types/nodemailer": "^6.4.8",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "@types/testing-library__jest-dom": "5.14.5",
     "cypress": "10.3.1",
-    "jest": "^29.4.1",
+    "jest": "^29.6.1",
     "jest-environment-jsdom": "28.1.0",
     "mongodb-memory-server": "^8.12.2",
     "prettier": "^2.8.1",
