--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sass": "^1.56.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "latest",
     "@testing-library/user-event": "14.2.0",
