--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@next/mdx": "^13.3.0",
     "@react-email/button": "^0.0.9",
     "@react-email/html": "^0.0.4",
     "@react-email/render": "^0.0.7",
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "gray-matter": "^4.0.3",
-    "mongodb": "^5.2.0",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.0.3",
     "next": "latest",
+    "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
@@ -40,6 +43,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "latest",
     "@testing-library/user-event": "14.2.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.0",
     "@types/node": "18.0.6",
     "@types/nodemailer": "^6.4.8",
