--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "gray-matter": "^4.0.3",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.0.3",
     "next": "latest",
@@ -45,6 +46,7 @@
     "@testing-library/user-event": "14.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.0.6",
     "@types/nodemailer": "^6.4.8",
     "@types/react": "18.0.15",
