--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/node": "18.0.6",
     "@types/nodemailer": "^6.4.8",
     "@types/react": "18.0.15",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "18.0.6",
     "@types/testing-library__jest-dom": "5.14.5",
     "cypress": "10.3.1",
