--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm": "10.5.0"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.3.0",
