--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "latest",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^15.0.2",
     "@testing-library/user-event": "14.2.0",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.5.0",
@@ -55,7 +55,8 @@
     "@types/testing-library__jest-dom": "5.14.5",
     "cypress": "10.3.1",
     "jest": "^29.6.1",
-    "jest-environment-jsdom": "28.1.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-svg-transformer": "^1.0.0",
     "mongodb-memory-server": "^8.12.2",
     "prettier": "^2.8.1",
     "start-server-and-test": "1.14.0",
