--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "volta": {
-    "node": "21.7.1",
-    "npm": "10.5.0"
+    "node": "18.12.1",
+    "npm": "9.6.1"
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^3.5.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@next/mdx": "^13.3.0",
     "@react-email/button": "^0.0.9",
     "@react-email/html": "^0.0.4",
@@ -30,7 +30,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.0.3",
-    "next": "14.1.4",
+    "next": "latest",
+    "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
