--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-email/html": "^0.0.4",
     "@react-email/render": "^0.0.7",
     "@sendgrid/mail": "^7.7.0",
+    "auth0": "^4.4.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "gray-matter": "^4.0.3",
