--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "volta": {
-    "node": "18.12.1",
-    "npm": "9.6.1"
+    "node": "20.5.0",
+    "npm": "10.5.2"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.1.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
-    "@next-auth/mongodb-adapter": "^1.1.3",
     "@next/mdx": "^13.3.0",
     "@react-email/button": "^0.0.9",
     "@react-email/html": "^0.0.4",
@@ -27,12 +27,13 @@
     "auth0": "^4.4.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "gray-matter": "^4.0.3",
     "jsonwebtoken": "^9.0.1",
-    "mongodb": "^5.7.0",
-    "mongoose": "^7.0.3",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.3.5",
     "next": "latest",
-    "next-auth": "^4.22.1",
+    "next-auth": "^5.0.0-beta.18",
     "nodemailer": "^6.9.3",
     "react": "18.2.0",
     "react-calendar": "^4.2.1",
@@ -47,6 +48,7 @@
     "@testing-library/react": "^15.0.2",
     "@testing-library/user-event": "14.2.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.0.6",
