--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cypress": "cypress open",
     "test": "jest",
     "cypress:headless": "cypress run",
+    "push:mongodb": "dotenv -e .env.local -- npx prisma db push",
     "e2e": "start-server-and-test dev http://localhost:3000 cypress",
     "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
@@ -17,15 +18,18 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.1.0",
+    "@auth/prisma-adapter": "^2.1.0",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.3.0",
+    "@prisma/client": "^5.14.0",
     "@react-email/button": "^0.0.9",
     "@react-email/html": "^0.0.4",
     "@react-email/render": "^0.0.7",
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "dotenv-cli": "^7.4.2",
     "gray-matter": "^4.0.3",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^6.6.2",
@@ -60,6 +64,7 @@
     "jest-svg-transformer": "^1.0.0",
     "mongodb-memory-server": "^8.12.2",
     "prettier": "^2.8.1",
+    "prisma": "^5.14.0",
     "start-server-and-test": "1.14.0",
     "typescript": "4.7.4"
   }
