--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "postinstall": "npm run push:mongodb",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -8,8 +9,9 @@
     "cypress": "cypress open",
     "test": "jest",
     "cypress:headless": "cypress run",
-    "push:mongodb": "dotenv -e .env.local -- npx prisma db push",
     "e2e": "start-server-and-test dev http://localhost:3000 cypress",
+    "push:local:mongodb": "dotenv -e .env.local -- npx prisma db push",
+    "push:mongodb": "dotenv -e .env -- npx prisma db push",
     "e2e:headless": "start-server-and-test dev http://localhost:3000 cypress:headless"
   },
   "volta": {
