--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "cypress": "10.3.1",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "29.7.0",
+    "jest-mock-extended": "^3.0.7",
     "jest-svg-transformer": "^1.0.0",
     "mongodb-memory-server": "^8.12.2",
     "prettier": "^2.8.1",
