--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
+    "paths": {
+      "@/pages/*": ["pages/*"],
+      "@/ui/*": ["ui/*"],
+      "@/helpers/*": ["helpers/*"],
+    },
     "plugins": [
       {
         "name": "next"
