--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,8 @@
     "**/*.ts",
     "**/*.tsx",
     "**/*.spec.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "types/next-auth.d.ts"
   ],
   "exclude": [
     "node_modules"
